# CryptoJ_Trader_Streamlined

./: .coverage  .coveragerc  .env.template  .gitignore  .gitmessage.txt  CHANGELOG.md  DEVELOPER.md  README.md  conftest.py  coverage.xml  dummy_state.json  dummy_state.json.backup  emergency_state.json  emergency_state.json.backup  health_metrics.json  launch_paper_trader.sh  monitor_script.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.bat  setup.py  test_basic.py  test_emergency_state.json  trading_bot.py
Updates/: 001_order_execution_update.md  002_daily_stats_update.md  004_daily_loss_limit_update.md  005_health_monitoring_update.md  007_final_summary.md  008_integration_tests.md  architect_prompt.txt  review_log_20250201_0416.txt  risk_management_update_001.txt  status_update_20250201_1741.md  status_update_20250202_0252.md  status_update_20250202_0326.md  thread_handover_001.txt  thread_handover_003.txt  thread_handover_phase1_task3_20250206.md  update_log.txt  update_log_20250128_1214.txt  update_log_20250128_1423.txt  update_log_20250128_1436.txt  update_log_20250128_1904.txt  update_log_20250128_1918.txt  update_log_20250128_1924.txt  update_log_20250128_2353.txt  update_log_20250129_0002.txt  update_log_20250129_0006.txt  update_log_20250129_0103.txt  update_log_20250129_1813.txt  update_log_20250131_0015.txt  update_log_20250131_0026.txt  update_log_20250131_0520.txt  update_log_20250131_0947.txt  update_log_20250201_0415.txt  update_log_20250201_1530.md  update_log_20250201_1722.md  update_log_20250201_1738.md  (+8 more)
(+198 files in other folders)
