[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto_j_trader"
version = "0.1.0"
authors = [
    {name = "Trading Bot Team"}
]
description = "Cryptocurrency Trading Bot"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=3.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["crypto_j_trader/tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=crypto_j_trader --cov-report=term-missing"